# sample-lib-try02

./: .gitignore  .travis.yml  README.md  README.rst  requirements_dev.txt  setup.cfg  tox.ini
sample_cli/: my_math.py  sample_cli.py
tests/: test_my_math.py  test_sample_cli.py
