[metadata]
name = sample_cli
version = attr: sample_cli.__version__
description = My package description
long_description = file: README.rst
keywords = sample_cli
url = https://github.com/qrZt6y2S/sample-lib-try02
author = qrZt6y2S
author_email = qrZt6y2S@inbox.lv
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2.7

[options]
zip_safe = False
packages = find:
